# EbonyPixel-Engine

./: README.txt
neo/: CMakeLists.txt  cmake-vs2017-32bit-windows10.bat
neo/cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
neo/framework/: CMakeLists.txt  Common.cpp  Common.h  Common_demos.cpp  Common_dialog.cpp  Common_load.cpp  Common_local.h  Common_localize.cpp  Common_mapconvert.cpp  Common_menu.cpp  Common_network.cpp  Common_printf.cpp  Compressor.cpp  Console.cpp  ConsoleHistory.cpp  DebugGraph.cpp  DeclManager.cpp  DeclParticle.cpp  DemoFile.cpp  EditField.cpp  EventLoop.cpp  File.cpp  File.h  FileSystem.cpp  File_SaveGame.cpp  KeyInput.cpp  Licensee.h  PlayerProfile.cpp  UsercmdGen.cpp  UsercmdGen.h  Zip.cpp  common_frame.cpp
neo/framework/aas/: AASFile.cpp
neo/framework/cm/: CollisionModel_load.cpp
neo/framework/swf/: SWF_Image.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_TextInstance.cpp
neo/framework/ui/: DeviceContext.cpp  GameBustOutWindow.cpp  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h
neo/game/: AF.cpp  AFEntity.cpp  Actor.cpp  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  Game.h  Game_local.cpp  Game_local.h  Game_network.cpp  MultiplayerGame.cpp  Player.cpp  Projectile.cpp
neo/game/ai/: AI.h  AI_events.cpp
neo/game/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp
neo/game/gamesys/: SysCmds.cpp
neo/game/menus/: MenuHandler.cpp  MenuHandler_Shell.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_SystemOptions.cpp
neo/game/physics/: Force_Spring.cpp  Physics_Actor.cpp  Physics_Monster.cpp  Physics_RigidBody.cpp
neo/idlib/: Base64.cpp  CMakeLists.txt  Dict.cpp  LangDict.cpp  Lib.cpp  Lib.h  MapFile.cpp  SmartPtr.cpp  SmartPtr.h  SoftwareCache.cpp  Str.cpp  precompiled.h
neo/idlib/containers/: LinkList.cpp  List.h
neo/idlib/geometry/: DrawVert.h  JointTransform.h  RenderMatrix.cpp
neo/idlib/math/: MatX.h
neo/idlib/sys/: sys_assert.cpp  sys_defines.h  sys_filesystem.h
neo/idlib/threading/: ParallelJobList.cpp  Thread.cpp  asyncEvents.cpp  asyncevents.h  iIntrusivePtr.cpp  iIntrusivePtr.h
neo/libs/gwen/include/gwen/: Anim.h  Font.h  Gwen.h  Skin.h  Structures.h  Texture.h
neo/libs/gwen/src/: Anim.cpp  ControlList.cpp  DragAndDrop.cpp  Gwen.cpp  Hook.cpp  Skin.cpp  ToolTip.cpp  Utility.cpp  events.cpp  inputhandler.cpp
neo/libs/gwen/src/Controls/: Base.cpp  Button.cpp  Canvas.cpp  CheckBox.cpp  CollapsibleCategory.cpp  ColorControls.cpp  ColorPicker.cpp  ComboBox.cpp  (+19 more)
neo/renderer/: BoundsTrack.cpp  CMakeLists.txt  Cinematic.cpp  Font.cpp  Font.h  Material.cpp  RenderSystem.cpp  RenderSystem_init.cpp  VertexCache.cpp  tr_local.h
neo/renderer/Context/: RenderLog.cpp  ResolutionScale.cpp  ScreenRect.cpp
neo/renderer/Image/: BinaryImage.cpp  Image.h  ImageManager.cpp  ImageManager.h  Image_intrinsic.cpp  Image_load.cpp  Image_loader.cpp  Image_loader.h  Image_process.cpp  Image_process.h  Image_program.cpp
neo/renderer/Image/DXT/: DXTDecoder.cpp  DXTEncoder.cpp  DXTEncoder_SSE2.cpp
neo/renderer/Image/loaders/: image_hdr.cpp  image_hdr.h  image_jpg.cpp  image_jpg.h  image_png.cpp  image_png.h  image_tga.cpp  image_tga.h
neo/renderer/OpenGL/: gl_backend.cpp
neo/renderer/RenderWorld/: RenderWorld.cpp  RenderWorld_defs.cpp  RenderWorld_demo.cpp  RenderWorld_load.cpp  RenderWorld_portals.cpp
neo/renderer/backEnd/: Framebuffer.cpp  Interaction.cpp  RenderProgs.cpp  RenderProgs_GLSL.cpp  tr_backend_draw.cpp  tr_backend_rendertools.cpp
neo/renderer/frontEnd/: RenderEntity.cpp  tr_frontend_addlights.cpp  tr_frontend_addmodels.cpp  tr_frontend_deform.cpp  tr_frontend_guisurf.cpp  tr_frontend_main.cpp  tr_frontend_subview.cpp  tr_trace.cpp  tr_trisurf.cpp
neo/renderer/jobs/: DynamicShadowVolume.cpp  DynamicShadowVolume_local.h  PreLightShadowVolume.cpp  PreLightShadowVolume_local.h  ShadowShared.cpp  StaticShadowVolume.cpp  StaticShadowVolume_local.h
neo/renderer/models/: Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  Model_beam.cpp  Model_iqm.cpp  Model_iqm.h  Model_liquid.cpp  Model_local.cpp  Model_local.h  Model_lwo.cpp  Model_md3.cpp  Model_md5.cpp  Model_md5.h  Model_prt.cpp  Model_sprite.cpp
neo/renderer/models/internal/: ModelDecal.cpp  ModelOverlay.cpp  ModelOverlay.h  Model_beam.cpp  Model_beam.h  Model_dinamic.cpp  Model_dinamic.h  Model_prt.cpp  Model_prt.h  Model_skined.cpp  Model_skined.h  Model_sprite.cpp  Model_sprite.h  Model_static.cpp  Model_static.h
neo/renderer/models/loaders/: Model_ase.cpp  Model_ase.h  Model_iqm.cpp  Model_iqm.h  Model_liquid.cpp  Model_liquid.h  Model_lwo.cpp  Model_lwo.h  Model_ma.cpp  Model_ma.h  Model_md3.cpp  Model_md3.h  Model_md5.cpp  Model_md5.h
neo/sound/: CMakeLists.txt  snd_local.h  snd_system.cpp  snd_world.cpp  sound.h
neo/sound/OpenAL/: AL_SoundHardware.cpp  AL_SoundSample.cpp  AL_SoundVoice.cpp
neo/sound/XAudio2/: XA2_SoundHardware.cpp  XA2_SoundSample.cpp  XA2_SoundVoice.cpp
neo/sound/stub/: SDL_SoundHardware.cpp  SDL_SoundHardware.h  SoundSample.cpp
neo/sys/: sys_lobby.cpp  sys_lobby_snapshot.cpp  sys_local.cpp  sys_local.h  sys_main.cpp  sys_public.cpp  sys_public.h  sys_session_local.cpp  sys_signin.cpp
neo/sys/common/: savegame.cpp  sys_console_common.cpp  sys_console_common.h  sys_cpu_common.cpp  sys_cpu_common.h  sys_filesys_common.cpp  sys_filesys_common.h  sys_glimp.cpp  sys_glimp.h  sys_input.cpp  sys_input.h  sys_process_common.cpp  sys_process_common.h
neo/sys/posix/: platform_linux.cpp  platform_osx.cpp  posix_main.cpp  posix_public.h  posix_signal.cpp  posix_syscon.cpp
neo/sys/win32/: win_local.h  win_shared.cpp  win_syscon.cpp
neo/sys/win32/rc/: game.rc  game_resource.h
neo/tools/: CMakeLists.txt
neo/tools/compilers/aas/: AASBuild.cpp  AASBuild_local.h  AASCluster.cpp  AASReach.cpp  Brush.cpp
neo/tools/compilers/dmap/: dmap.cpp  dmap.h  facebsp.cpp  optimize.cpp  usurface.cpp
neo/tools/compilers/roqvq/: NSBitmapImageRep.cpp  codec.cpp  roq.cpp  roq.h  roqParam.cpp
(+29 files in other folders)
